--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <a mat-button routerLink="/home">Home</a>
-  <a mat-button routerLink="/tasks">Tasks</a>
+  <a mat-button routerLink="/favorites">Favorites</a>
   <a mat-button routerLink="/about">About</a>
   <span class="spacer"></span>
 
