add Minor changes

--- a/src/app/ui/confirm-dialog/confirm-dialog.component/confirm-dialog.component.html
+++ b/src/app/ui/confirm-dialog/confirm-dialog.component/confirm-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Confirmation</h2>
 
 <mat-dialog-content>
-  Do you want to save these changes to your profile?
+  Would you like to save these changes to your profile?
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
