--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -6,7 +6,7 @@
   </div>
   <a mat-button routerLink="/home">Home</a>
   <a mat-button routerLink="/favorites">Favorites</a>
-  <a mat-button routerLink="/about">About</a>
+  <a mat-button routerLink="/my-flat">My Flats</a>
   <a mat-button routerLink="/users" *ngIf="(auth.isAdmin$ | async) === true"
     >All Users</a
   >
