--- a/src/app/flats/view-flat.page.html
+++ b/src/app/flats/view-flat.page.html
@@ -4,7 +4,10 @@
   <div class="view-wrap">
     <section class="left">
       <div class="main-photo">
-        <img [src]="mainImage" [alt]="f.title || (f.city + ' · ' + f.streetName)" />
+        <img
+          [src]="mainImage"
+          [alt]="f.title || (f.city + ' · ' + f.streetName)"
+        />
       </div>
 
       <div class="thumbs" *ngIf="images.length > 1">
@@ -21,27 +24,53 @@
 
     <aside class="right">
       <h1 class="title">{{ f.title || (f.city + ' · ' + f.streetName) }}</h1>
-      <div class="addr">{{ f.streetNumber }} {{ f.streetName }}, {{ f.city }}</div>
+      <div class="addr">
+        {{ f.streetNumber }} {{ f.streetName }}, {{ f.city }}
+      </div>
 
       <div class="price">
         ${{ f.rentPrice | number:'1.0-0' }} <span class="unit">/month</span>
       </div>
 
       <div class="quick-facts">
-        <div class="fact"><span class="label">Area</span><span class="val">{{ f.areaSize }} ㎡</span></div>
-        <div class="fact"><span class="label">Year built</span><span class="val">{{ f.yearBuilt }}</span></div>
-        <div class="fact"><span class="label">Has AC</span><span class="val">{{ f.hasAC ? 'Yes' : 'No' }}</span></div>
-        <div class="fact"><span class="label">Available from</span><span class="val">{{ f.dateAvailable }}</span></div>
+        <div class="fact">
+          <span class="label">Area</span
+          ><span class="val">{{ f.areaSize }} ㎡</span>
+        </div>
+        <div class="fact">
+          <span class="label">Year built</span
+          ><span class="val">{{ f.yearBuilt }}</span>
+        </div>
+        <div class="fact">
+          <span class="label">Has AC</span
+          ><span class="val">{{ f.hasAC ? 'Yes' : 'No' }}</span>
+        </div>
+        <div class="fact">
+          <span class="label">Available from</span
+          ><span class="val">{{ f.dateAvailable }}</span>
+        </div>
       </div>
 
       <div class="owner" *ngIf="f.ownerName || f.ownerEmail">
         <span class="label">Owner</span>
         <span class="val">
-          {{ f.ownerName || 'Owner' }}<ng-container *ngIf="f.ownerEmail"> • {{ f.ownerEmail }}</ng-container>
+          {{ f.ownerName || 'Owner' }}<ng-container *ngIf="f.ownerEmail">
+            • {{ f.ownerEmail }}</ng-container
+          >
         </span>
       </div>
 
-      <a *ngIf="canEdit()" class="btn primary edit-btn" [routerLink]="['/flats', f.id, 'edit']">Edit</a>
+      <a
+        *ngIf="canEdit()"
+        class="btn primary edit-btn"
+        [routerLink]="['/flats', f.id, 'edit']"
+        >Edit</a
+      >
+
+      <app-message
+        [flatId]="f.id ?? ''"
+        [ownerId]="f.ownerId ?? ''"
+      ></app-message>
 
       <div class="map-block" *ngIf="address">
         <iframe
